--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
         <ul class="footer-menu">
-            <li class="footer-item">Theme:&nbsp;<a href="https://www.github.org/WebCodr/WebCodr-Theme" class="footer-link">WebCodr Hugo Theme</a></li>
+            <li class="footer-item">Theme:&nbsp;<a href="https://www.github.org/WebCodr/theme" class="footer-link">WebCodr Theme for Hugo</a></li>
         </ul>
     </div>
 </footer>
