--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -4,6 +4,6 @@
         {{ .Content }}
     </div>
     <p class="post-meta">
-        <time datetime="2014-10-09T20:40:14" class="post-date">{{ .Date.Format "2. January 2006" }}</time>
+        <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}" class="post-date">{{ .Date.Format "2. January 2006" }}</time>
     </p>
 </article>
