--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -3,7 +3,9 @@
     <div class="post-content">
         {{ .Content }}
     </div>
-    <p class="post-meta">
-        <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}" class="post-date">{{ .Date.Format "2. January 2006" }}</time>
-    </p>
+    {{ if eq .Type "post" }}
+        <p class="post-meta">
+            <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}" class="post-date">{{ .Date.Format "2. January 2006" }}</time>
+        </p>
+    {{ end }}
 </article>
