--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -1,11 +1,13 @@
 <article class="post">
     <h1 class="post-headline"><a href="{{ .Permalink }}" class="post-link--headline">{{ .Title }}</a></h1>
-    <div class="post-content">
-        {{ .Content }}
-    </div>
     {{ if eq .Type "post" }}
         <p class="post-meta">
             <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}" class="post-date">{{ .Date.Format "2. January 2006" }}</time>
+            &middot;
+            <span class="post-language">{{ if eq .Params.displayLanguage "en" }}🇬🇧{{ else }}🇩🇪{{ end }}</span>
         </p>
     {{ end }}
+    <div class="post-content">
+        {{ .Content }}
+    </div>
 </article>
