--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/webcodr.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/solarized-light.css">
+    <link rel="stylesheet" href="/css/atom-one-dark.css">
     <script src="/js/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
